wrapping up the project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Rock, Paper, Scissors</title>
   <link rel="stylesheet" href="index.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="app.js" defer></script>
+
 </head>
 <body>
   <button  class="glow-on-hover" id="start-game-btn">Start Game!</button>
+
 </body>
 </html>
